# pyxzones

./: README.md  bugs_enhancements.md  pyproject.toml  pyxzones.service  requirements.txt  run.sh
example_config/: pyxzones.json
pyxzones/: __main__.py  config.py  process.py  service.py  settings.py  snap.py  types.py  xewmh.py  xq.py  zone_display.py  zone_profile.py  zoning.py
src/snappyzones/: __main__.py  service.py  snap.py  types.py  x.py  zone_display.py  zoning.py
src/snappyzones/conf/: settings.py
